# Vibe-Coding

./: .gitignore  2cli.py  README.md  WARP.md  cli.py  code.py  conversation_history.bak  conversation_history.json  debug_ai_response.py  launch.py  product_spec.md  pyproject.toml  requirements.txt  rules.md  run.py  run_web.py  snippet.py  todo.md  typing_indicator.py
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css  types.ts
frontend/src/components/: Chat.tsx  Settings.tsx
src/: conversation_memory.json  gui.py
src/ai_vibe_chat/: __init__.py  cli.py  data_model.py  engine.py  file_manager.py  memory.py  web_app.py  webapp.py
src/ai_vibe_chat.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/ai_vibe_chat/personalities/: __init__.py  base.py  rizz.py  sarcastic.py  wholesome.py
src/ai_vibe_chat/providers/: __init__.py  base.py  gemini.py  huggingface_provider.py  local_rules.py  perplexity.py
templates/: chat.html
tests/: __init__.py  test_cli.py  test_emoji_detection.py  test_engine.py  test_file_manager.py  test_integration.py  test_persistence_restart.py
