[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-vibe-chat"
version = "0.1.0"
description = "AI Vibe Chat / Personality Bot"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "click>=8.1.7",
  "colorama>=0.4.6",
]

[project.scripts]
ai-vibe-chat = "ai_vibe_chat.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

